--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 3 MobileTerminal/dianFeng-master.zip
+baolema-vue-user-front-main
+bootstrap5_2021-master
+bootstrap-master
+Examination_System-master
+mblog-master
+oderingFood-master
+vue3-vite-bootstrap-zhihu-master
+vue-admin-manager-master
+Vue-BootstrapVue-master
+Zhihu-master
