--- a/Vue/day3/hello/package.json
+++ b/Vue/day3/hello/package.json
@@ -11,7 +11,8 @@
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "hello": "file:",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-router": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
